--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.redis</groupId>
+			<artifactId>spring-batch-redis</artifactId>
+			<version>2.31.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
